ticketing-app/infra/k8s/expiration-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
        - name: expiration
          # image: us.gcr.io/seventh-hallway-391612/expiration
          image: leonyalin/expiration
